# sqlalchemy-theseus-dialect

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  try_driver.py
.github/workflows/: ci.yml
src/sqlalchemy_theseus_dialect/: __init__.py  sqlalchemy_interfaces.py
