[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[project]
name = "tester-dialect"
version = "0.0.9"
description = "A SQLAlchemy dialect for connecting to a Theseus Flight SQL server with ADBC"
readme = "README.md"
authors = [{ name = "Philip Moore", email = "prmoore77@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sqlalchemy", "theseus", "gpu", "flight-sql", "adbc", "dialect"]
dependencies = [
    "sqlalchemy==1.4.36",
    "adbc-driver-flightsql==1.1.*",
    "adbc-driver-manager==1.1.*",
    "pyarrow==14.0.1",
    "psycopg2==2.9.*",
    "importlib-metadata==8.0.*",
    "tenacity==8.5.*"
]
requires-python = ">=3.9"

[project.entry-points."sqlalchemy.dialects"]
tester = "sqlalchemy_theseus_dialect:TheseusDialect"

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/prmoore77/sqlalchemy-theseus-dialect"

[project.scripts]

[tool.bumpver]
current_version = "0.0.9"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
    '^current_version = "{version}"$',
]
"src/sqlalchemy_theseus_dialect/__init__.py" = [
    '^__version__ = "{version}"$',
]
